[package]
name = "rust-metrics-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_metrics_py"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust_metrics_py_cli"
path = "src/main.rs"

[dependencies]
pyo3 = "0.21"
numpy = "0.21"
ndarray = "0.15"
ndarray-stats = "0.5"
rand = "0.8"
rand_pcg = "0.3"
rand_mt = "3.0"
linregress = "0.5"
rayon = "*"